--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+
 
 </html>
